# django-privacy-killer

./: .travis.yml  CHANGELOG.rst  README.rst  setup.cfg  tox.ini
docs/: conf.py  index.rst
privacy_killer/templatetags/: privacy_killer.py
tests/testapp/: settings.py  test_privacy_killer.py
