[metadata]
name = django_privacy_killer
version = attr: privacy_killer.__version__
description = Template tags for including tracker codes
long_description = file: README.rst
long_description_content_type = text/x-rst
url = http://github.com/matthiask/django-privacy-killer/
author = Matthias Kestenholz
author_email = mk@feinheit.ch
license = BSD-3-Clause
license_file = LICENSE
platforms = OS Independent
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
include_package_data = True
zip_safe = False

[options.extras_require]
tests =
    coverage

[options.packages.find]
exclude = tests

[flake8]
exclude = venv,.tox,migrations,docs
ignore = E203,W503
max-complexity = 10
max-line-length = 88

[coverage:run]
branch = True
include =
    *privacy_killer*
omit =
    *migrations*
    *tests*
    *.tox*

[isort]
profile = black
combine_as_imports = True
lines_after_imports = 2
